log
Sat Mar 19 19:29:21 UTC 2022: 
 list.c | 33 ++++++++++++++++++++++++++++-----
 1 file changed, 28 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:16: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   List *rem = (list *) malloc (sizeof(list));
                ^~~~
                List
list.c:32:16: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:22: error: expected expression before ‘)’ token
   List *rem = (list *) malloc (sizeof(list));
                      ^
list.c:35:8: error: ‘List {aka struct List}’ has no member named ‘curret’; did you mean ‘current’?
   rem->curret = NULL;
        ^~~~~~
        current
list.c: In function ‘firstList’:
list.c:40:7: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list.current = list.head;
       ^
       ->
list.c:40:22: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list.current = list.head;
                      ^
                      ->
list.c: In function ‘pushFront’:
list.c:62:3: error: unknown type name ‘node’; did you mean ‘Node’?
   node *pizza = createNode(data);
   ^~~~
   Node
list.c:62:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   node *pizza = createNode(data);
                 ^~~~~~~~~~
list.c:65:10: error: request for member ‘next’ in something not a structure or union
     pizza->next = list->head;
          ^~
list.c:66:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head->prev = pizza;
                      ^
list.c:67:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head = pizza;
                ^
list.c:71:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->current = pizza;
                   ^
list.c:72:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head = pizza;
                ^
list.c:73:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->tail = pizza;
                ^
cc1: all warnings being treated as errors
Compilation failed
a01ea4c
Sat Mar 19 19:34:16 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:39: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   List *rem = (List *) malloc (sizeof(list));
                                       ^~~~
                                       List
list.c:32:39: note: each undeclared identifier is reported only once for each function it appears in
list.c:35:8: error: ‘List {aka struct List}’ has no member named ‘curret’; did you mean ‘current’?
   rem->curret = NULL;
        ^~~~~~
        current
list.c: In function ‘pushFront’:
list.c:62:3: error: unknown type name ‘node’; did you mean ‘Node’?
   node *pizza = createNode(data);
   ^~~~
   Node
list.c:62:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   node *pizza = createNode(data);
                 ^~~~~~~~~~
list.c:65:10: error: request for member ‘next’ in something not a structure or union
     pizza->next = list->head;
          ^~
list.c:66:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head->prev = pizza;
                      ^
list.c:67:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head = pizza;
                ^
list.c:71:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->current = pizza;
                   ^
list.c:72:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head = pizza;
                ^
list.c:73:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->tail = pizza;
                ^
cc1: all warnings being treated as errors
Compilation failed
ec01c90
Sat Mar 19 19:36:13 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘pushFront’:
list.c:62:3: error: unknown type name ‘node’; did you mean ‘Node’?
   node *pizza = createNode(data);
   ^~~~
   Node
list.c:62:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   node *pizza = createNode(data);
                 ^~~~~~~~~~
list.c:65:10: error: request for member ‘next’ in something not a structure or union
     pizza->next = list->head;
          ^~
list.c:66:22: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head->prev = pizza;
                      ^
list.c:67:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head = pizza;
                ^
list.c:71:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->current = pizza;
                   ^
list.c:72:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head = pizza;
                ^
list.c:73:16: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->tail = pizza;
                ^
cc1: all warnings being treated as errors
Compilation failed
d854cc7
Sat Mar 19 19:39:24 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3adfc17
Sat Mar 19 19:40:18 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e8f420f
Sat Mar 19 19:42:05 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
906f261
Sat Mar 19 19:43:48 UTC 2022: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
252bc63
Sat Mar 19 19:44:50 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
18100f8
Sat Mar 19 19:46:19 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
1166657
Sat Mar 19 19:50:28 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:91:9: error: unused variable ‘pizza’ [-Werror=unused-variable]
   Node *pizza = createNode(data);
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ea57a64
Sat Mar 19 20:16:57 UTC 2022: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:95:21: error: ‘pizza’ undeclared (first use in this function)
     list->current = pizza;
                     ^~~~~
list.c:95:21: note: each undeclared identifier is reported only once for each function it appears in
list.c:109:5: error: expected ‘;’ before ‘list’
     list->current->next->prev = chirimoya;
     ^~~~
Compilation failed
d88603e
Sat Mar 19 20:17:10 UTC 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘pushCurrent’:
list.c:109:5: error: expected ‘;’ before ‘list’
     list->current->next->prev = chirimoya;
     ^~~~
Compilation failed
d14f82b
Sat Mar 19 20:17:24 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
3db50a6
Sat Mar 19 20:45:39 UTC 2022: 
 list.c | 34 +++++++++++++++++++++++++++++++---
 1 file changed, 31 insertions(+), 3 deletions(-)
 tests:  0|0
d9a25f5
Sat Mar 19 20:46:38 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
93cb0dd
Sat Mar 19 22:34:09 UTC 2022: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
09f3a54
Mon Mar 21 00:29:34 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘popCurrent’:
list.c:129:5: error: expected ‘(’ before ‘)’ token
   if)
     ^
Compilation failed
e7077b6
Mon Mar 21 00:29:43 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a4bdf09
Mon Mar 21 00:32:45 UTC 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
76958e8
Mon Mar 21 00:33:17 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b7f35f
Mon Mar 21 00:36:27 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
7de1315
Mon Mar 21 00:38:36 UTC 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘popCurrent’:
list.c:127:10: error: unused variable ‘aux’ [-Werror=unused-variable]
   void * aux = list->current->data;
          ^~~
cc1: all warnings being treated as errors
Compilation failed
cf2908a
Mon Mar 21 00:38:46 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
454c802
Mon Mar 21 00:40:16 UTC 2022: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
c051de5
Mon Mar 21 00:42:19 UTC 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
28f3b17
Mon Mar 21 00:43:16 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
92c4177
Mon Mar 21 00:45:10 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
251c7fb
